src/app/globals.css
@import "tailwindcss";

@import "./assets/_variables/_colors.css";
@import "./assets/_variables/_typography.css";
@import "./assets/_variables/_breakpoints.css";

:root {
  --font-inter: "Inter", "Arial", "Helvetica", sans-serif;
}

@layer base {
  .text-custom-xs {
    @apply text-xs leading-5 font-normal;
  }
  .text-custom-sm {
    @apply text-sm font-normal leading-5.5;
  }
  .text-custom-md {
    @apply text-[16px] leading-6 font-medium;
  }
  .text-custom-xl {
    @apply text-xl leading-6 font-normal tracking-[-0.1px] text-text-primary;
  }
}

body {
  @apply bg-background text-foreground box-border;
}

.topbar-selector {
  > div:nth-child(3) {
    @apply py-[2px] px-2 text-[13px] min-w-50;
  }
  > div:nth-child(4) {
    @apply bg-white;
    > div {
      @apply border-none;
    }
  }
}

/* react color pickup */
.w-color-saturation {
  border: 1px solid var(--color-border-gray) !important;
  margin-bottom: 16px;
  border-radius: 8px !important;

  & > div:first-child {
    height: 32px !important;
    width: 32px !important;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #ffffff !important;
    background-image: none !important;
    border: 1px solid var(--color-border-gray) !important;

    & > div:first-child {
      height: 16px !important;
      width: 16px !important;
    }
  }
}

.w-color-alpha-horizontal {
  height: 12px !important;

  & > div:first-child {
    border-radius: 24px !important;
  }

  & .w-color-interactive > div:first-child {
    transform: translate(-16px, -9px) !important;
    height: 32px !important;
    width: 32px !important;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #ffffff !important;
    background-image: none !important;
    box-shadow: none !important;
    border: 1px solid var(--color-border-gray) !important;

    & > div:first-child {
      height: 16px !important;
      width: 16px !important;
    }
  }
}

.tiptap-wrapper {
  @layer base {
    @apply rounded-xl border border-border-gray px-6 py-5;
  }
}

.tiptap {
  @apply pt-5 text-text-primary min-h-[calc(100vh-116px)] rounded-xl;

  h1 {
    @apply text-xl leading-7 font-medium;
  }

  h2 {
    @apply text-lg leading-6 font-medium;
  }

  p {
    @apply text-sm leading-5.5 font-normal;
  }

  ul,
  ol {
    @apply pl-6;
  }

  hr {
    @apply border-text-primary;
  }

  p.is-empty::before {
    @apply text-text-placeholder float-left h-0 pointer-events-none;
    content: attr(data-placeholder);
  }

  img {
    @apply py-2;
  }

  table {
    @apply overflow-hidden w-full table-fixed bg-white mt-1 mb-1 border-collapse;

    td,
    th {
      @apply border border-gray-300 box-border min-w-[1fr] relative;
    }

    th {
      @apply bg-gray-100 text-left px-2 py-1;
    }

    td {
      @apply px-2 py-1;
    }
  }

  .callout {
    @apply my-5 bg-background-primary p-3 rounded;
    .callout__content {
      @apply font-medium text-sm leading-5.5;
    }
  }
}

@utility resize-bar {
  @apply absolute transition-opacity duration-150 ease-out bg-text-placeholder rounded z-10 border border-gray-200;
  @apply w-2 h-[50%] top-1/2 right-0 -translate-y-[50%] transform cursor-nw-resize;
}

[data-resize-wrapper] {
  @apply relative;

  &:hover [data-resize-handle] {
    @apply opacity-80;
  }
  [data-resize-handle="bottom-right"] {
    @apply resize-bar opacity-0;
  }
}

.ProseMirror-focused {
  outline: none;
}

